--- a/templates/uwsgi.ini
+++ b/templates/uwsgi.ini
@@ -3,7 +3,6 @@ master    = true
 processes = 6
 cheaper   = 2
 socket    = 127.0.0.1:{{ gitlab_uwsgi_port }}
-env       = RAILS_ENV=production
 
 uid       = {{ gitlab_user }}
 gid       = {{ gitlab_user }}
@@ -11,6 +10,10 @@ gid       = {{ gitlab_user }}
 home      = /home/{{ gitlab_user }}
 chdir     = %(home)/gitlab
 daemonize = %(home)/log/uwsgi.log
+
+env       = RAILS_ENV=production
+env       = HOME=%(home)
+env       = USER=%(uid)
 
 plugin    = rack
 rack      = config.ru
