tmp/pids is in %(home) actually

--- a/templates/uwsgi.ini
+++ b/templates/uwsgi.ini
@@ -21,4 +21,4 @@ rack      = config.ru
 rbrequire = rubygems
 rbrequire = bundler/setup
 
-smart-attach-daemon = %(chdir)/tmp/pids/sidekiq.pid bundle exec rake sidekiq:start
+smart-attach-daemon = %(home)/tmp/pids/sidekiq.pid bundle exec rake sidekiq:start
