use unix socket instead of a tcp one

--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -23,6 +23,6 @@ server {
       uwsgi_param SCRIPT_NAME "";
       uwsgi_param SERVER_NAME $host;
       uwsgi_modifier1 7;
-      uwsgi_pass 127.0.0.1:{{ gitlab_uwsgi_port }};
+      uwsgi_pass unix:///run/uwsgi/gitlab.sock;
   }
 }
