--- a/templates/uwsgi.ini
+++ b/templates/uwsgi.ini
@@ -2,10 +2,13 @@
 master    = true
 processes = 6
 cheaper   = 2
-socket    = 127.0.0.1:{{ gitlab_uwsgi_port }}
 
 uid       = {{ gitlab_user }}
 gid       = {{ gitlab_user }}
+
+socket    = /run/uwsgi/gitlab.sock
+chmod-socket  =  666
+chown-socket  =  %(uid)
 
 home      = /home/{{ gitlab_user }}
 chdir     = %(home)/gitlab
