some uwsgi options to reduce resource exhaustion

--- a/templates/uwsgi.ini
+++ b/templates/uwsgi.ini
@@ -6,6 +6,13 @@ cheaper   = 2
 uid       = {{ gitlab_user }}
 gid       = {{ gitlab_user }}
 
+# reload after 3 days, 500MB or a million requests
+reload-on-rss       = 500
+max-worker-lifetime = 259200
+max-requests        = 1000000
+harakiri            = 30
+#cheaper-algo = busyness
+
 socket    = /run/uwsgi/gitlab.sock
 chmod-socket  =  666
 chown-socket  =  %(uid)
