Install default ruby package
This role will only be tested on Debian 8 from now, and its default ruby version is 2.1

--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -21,7 +21,7 @@
     - mysql-server
     - mysql-client
     - libmysqlclient-dev
-    - ruby1.9.1
+    - ruby
     - bundler
     - python2.7
     - python-mysqldb # Required for ansible mysql module to work, see: http://ansible.cc/docs/modules.html#mysql-user
