OS versions for galaxy
Debian 8 (jessie) and Ubuntu 14.04 (trusty) are tested.
Others are less likely to be tested, but might work.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,10 +7,10 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-      - saucy
+      - trusty
     - name: Debian
       versions:
-      - wheezy
+      - jessie
   categories:
     - web
 dependencies:
